--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -40,6 +40,10 @@
     </label>
     <button id="getToken">Get Token</button>
     <p id="accessToken"></p>
+    <!-- STEP 3 -- MAKE SURE STEP 3 WORKS BEFORE MOVING ON-->
+    <h4>Step 3: Get the calendar events using your access token</h4>
+    <button id="getEvents">Get Events</button>
+    <p id="events"></p>
   </main>
   <script type="text/javascript">
     // --------------------- STEP 1
@@ -47,7 +51,7 @@
     const resultElement = document.getElementById("result");
     const resultLink = document.getElementById("authURL");
     // Replace this with your own endpoint
-    const getAuthURL = "https://u1ukwwbuma.execute-api.us-west-2.amazonaws.com/dev/api/get-auth-url";
+    const getAuthURL = "https://zndplikj16.execute-api.us-west-2.amazonaws.com/dev/api/get-auth-url";
 
     getURLElement.onclick = function () {
       fetch(getAuthURL)
@@ -70,7 +74,7 @@
     const getAccessToken = document.getElementById("getToken");
     const accessTokenElement = document.getElementById("accessToken");
     const getToken =
-      "https://u1ukwwbuma.execute-api.us-west-2.amazonaws.com/dev/api/token";
+      "https://zndplikj16.execute-api.us-west-2.amazonaws.com/dev/api/token";
 
     getAccessToken.onclick = function () {
       let code = codeValue.value;
@@ -89,7 +93,25 @@
           accessTokenElement.innerText = JSON.stringify(json);
         });
     };
-      // --------------------- END OF STEP 2
+    // --------------------- END OF STEP 2
+
+    // -- STEP 3
+    const getEvents = document.getElementById("getEvents");
+    const events = document.getElementById("events");
+    const getCalendarEvents = "https://zndplikj16.execute-api.us-west-2.amazonaws.com/dev/api/get-events";
+
+    getEvents.onclick = function () {
+      const { access_token } = JSON.parse(accessTokenElement.innerText);
+      const eventRequest = getCalendarEvents + "/" + access_token;
+      fetch(eventRequest)
+        .then(function (response) {
+          return response.json();
+        })
+        .then(function (json) {
+          events.innerText = JSON.stringify(json, null, 2);
+        });
+    };
+      // -- END OF STEP 3
   </script>
 </body>
 
